[gd_scene load_steps=11 format=2]

[ext_resource path="res://Common/Endgame.gd" type="Script" id=1]
[ext_resource path="res://Backdrop.png" type="Texture" id=2]
[ext_resource path="res://Balsamiq_Sans/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MenuStyle.tres" type="Theme" id=4]
[ext_resource path="res://Common/sign.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 3 )

[node name="Endgame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 641, 400 )
texture = ExtResource( 2 )

[node name="Sign" type="Sprite" parent="."]
position = Vector2( 640, 314 )
scale = Vector2( 0.552273, 0.552273 )
texture = ExtResource( 5 )

[node name="EndgameMessage" type="Label" parent="."]
anchor_left = 0.141
anchor_top = 0.092
anchor_right = 0.859
anchor_bottom = 0.147
margin_left = -0.480011
margin_top = 0.399994
margin_right = 0.47998
margin_bottom = 0.400002
custom_fonts/font = SubResource( 1 )
text = "The canning season has ended! Here is how you scored:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrotCount" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 813.0
margin_top = 247.0
margin_right = -423.0
margin_bottom = -514.0
custom_fonts/font = SubResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrotCountMessage" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 417.5
margin_top = 241.0
margin_right = -473.5
margin_bottom = -515.0
custom_fonts/font = SubResource( 3 )
text = "Carrots Left Over:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SanatizedJarsCount" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 813.0
margin_top = 332.0
margin_right = -423.0
margin_bottom = -429.0
custom_fonts/font = SubResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SanatizedJarsMessage" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 419.0
margin_top = 329.0
margin_right = -472.0
margin_bottom = -427.0
custom_fonts/font = SubResource( 3 )
text = "Jars Left Over:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CannedCount" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 813.0
margin_top = 414.0
margin_right = -423.0
margin_bottom = -347.0
custom_fonts/font = SubResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CannedMessage" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 419.0
margin_top = 412.0
margin_right = -472.0
margin_bottom = -344.0
custom_fonts/font = SubResource( 3 )
text = "Total Canned:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 877.0
margin_top = 530.0
margin_right = -163.0
margin_bottom = -115.0
custom_fonts/font = SubResource( 4 )
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalMessage" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 142.0
margin_top = 519.0
margin_right = -432.0
margin_bottom = -126.0
custom_fonts/font = SubResource( 5 )
text = "Total Score:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="."]
pause_mode = 2
margin_left = 540.0
margin_top = 672.0
margin_right = 739.0
margin_bottom = 755.0
theme = ExtResource( 4 )
text = "Replay?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreenTimer" type="Timer" parent="."]

[connection signal="pressed" from="ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="timeout" from="StartScreenTimer" to="." method="_on_StartScreenTimer_timeout"]
